manifest/chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-chat
  namespace: apps
spec:
  selector:
    matchLabels:
      app: chat-app-chat
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chat-app-chat
    spec:
      containers:
        - name: chat-app-chat
          image: cyrildavif/chat_app_chat:f507881
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi

          ports:
            - containerPort: 8083
