manifest/chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-chat-svc
  namespace: apps
spec:
  selector:
    app: chat-app-chat
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: NodePort
